[gd_scene load_steps=3 format=3 uid="uid://fftl0wsif3j6"]

[ext_resource type="Script" uid="uid://qg32bkdskrbw" path="res://pop_up_settings.gd" id="1_11thn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_11thn"]
bg_color = Color(0.85098, 0.137255, 0.243137, 1)

[node name="pop_up_settings" type="Node2D"]
script = ExtResource("1_11thn")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Window" type="Window" parent="."]
initial_position = 1
size = Vector2i(300, 500)
unresizable = true

[node name="Camera2D" type="Camera2D" parent="Window"]
position = Vector2(150, 250)

[node name="screenshot_button" type="Button" parent="Window"]
offset_left = 51.0
offset_top = 375.0
offset_right = 242.0
offset_bottom = 442.0
text = "SCREENSHOT"

[node name="reset_button" type="Button" parent="Window"]
offset_left = 97.0
offset_top = 453.0
offset_right = 196.0
offset_bottom = 492.0
theme_override_styles/normal = SubResource("StyleBoxFlat_11thn")
text = "Reset"

[node name="OptionButton" type="OptionButton" parent="Window"]
offset_left = 30.0
offset_top = 20.0
offset_right = 62.0
offset_bottom = 40.0

[node name="Button" type="Button" parent="Window"]
offset_left = 57.0
offset_top = 67.0
offset_right = 139.0
offset_bottom = 149.0

[node name="Button6" type="Button" parent="Window"]
offset_left = 57.0
offset_top = 257.0
offset_right = 139.0
offset_bottom = 339.0

[node name="Button2" type="Button" parent="Window"]
offset_left = 57.0
offset_top = 162.0
offset_right = 139.0
offset_bottom = 244.0

[node name="Button3" type="Button" parent="Window"]
offset_left = 157.0
offset_top = 162.0
offset_right = 239.0
offset_bottom = 244.0

[node name="Button4" type="Button" parent="Window"]
offset_left = 157.0
offset_top = 257.0
offset_right = 239.0
offset_bottom = 339.0

[node name="Button5" type="Button" parent="Window"]
offset_left = 157.0
offset_top = 67.0
offset_right = 239.0
offset_bottom = 149.0

[connection signal="button_up" from="Window/screenshot_button" to="." method="_on_screenshot_button_button_up"]
[connection signal="button_up" from="Window/reset_button" to="." method="_on_reset_button_button_up"]
[connection signal="item_selected" from="Window/OptionButton" to="." method="_on_option_button_item_selected"]
